--- a/views/teams/forms/form-edit-member.hbs
+++ b/views/teams/forms/form-edit-member.hbs
@@ -1,10 +1,13 @@
 <div class="form-group">
     <p>Ändere hier die Rolle des Nutzers:</p>
-    <div style="margin-bottom: 6rem" class="form-group padding-bottom">
+    <div style="margin-bottom: 12rem" class="form-group padding-bottom">
         <label for="role">Gebe hier ein, welche Rolle das Mitglied erhalten soll.</label>
         <select placeholder="Rolle angeben" name="role" id="role">
-            <option value="leader" selected>Leiter</option>
-            <option value="member">Mitglied</option>
+            <option value="member" selected>Mitglied</option>
+            <option value="teamexpert">Team-Experte</option>
+            <option value="teamleader">Team-Leiter</option>
+            <option value="teamadministrator">Team-Admin</option>
+            <option value="teamowner">Team-Eigentümer</option>
         </select>
     </div>
 </div>
