--- a/views/teams/members.hbs
+++ b/views/teams/members.hbs
@@ -37,7 +37,7 @@
             </div>
 
             {{#ifCond (arrayLength bodyInvitations) '>' 0}}
-                <h4 class="padding-top">Ausstehende Einladungen</h4>
+                <h4 style="margin-top: 2rem" class="padding-top">Ausstehende Einladungen</h4>
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-12 no-padding">
