--- a/views/teams/forms/form-invite-external-member.hbs
+++ b/views/teams/forms/form-invite-external-member.hbs
@@ -5,8 +5,8 @@
         <input class="form-control" type="text" name="email" id="email" placeholder="E-Mail eingeben">
     </div>
     <div style="margin-bottom: 6rem" class="form-group padding-bottom">
-        <label for="role">Gebe hier ein, welche Rolle das Mitglied erhalten soll.</label>
-        <select placeholder="Rolle angeben"  name="role" id="role">
+        <label for="role">Gebe hier ein, welche Rolle das Mitglied erhalten soll. *</label>
+        <select placeholder="Rolle angeben"  name="role" id="role" required>
             <option value="teamadministrator">Leiter</option>
             <option value="teamexpert">Experte</option>
             <option value="teammember">Mitglied</option>
