--- a/static/styles/lib/bootstrap/scss/_tables.scss
+++ b/static/styles/lib/bootstrap/scss/_tables.scss
@@ -17,6 +17,7 @@
   thead th {
     vertical-align: bottom;
     border-bottom: (2 * $table-border-width) solid $table-border-color;
+    background: #f5f5f5
   }
 
   tbody + tbody {
