--- a/views/firstLogin/firstLoginExistingUser.hbs
+++ b/views/firstLogin/firstLoginExistingUser.hbs
@@ -21,7 +21,7 @@
         </div>
 
       <button id="showExistingLoginForm" class="btn btn-primary" style="margin-top:6px;" disabled>Weiter</button>
-      <p class="mt-2 explanation nomargin">* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir in der {{theme.short_title}} die männliche Form (z.B. „Schüler“, „Lehrer“). Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die {{theme.short_title}} ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. 🌈🎉🦄 </p>
+      {{> "firstLogin/sections/language-hint"}}
     </div>
   {{/content}}
 {{/extend}}
