rollen bearbeitung ist jetzt möglich

--- a/views/teams/forms/form-add-member.hbs
+++ b/views/teams/forms/form-add-member.hbs
@@ -1,5 +1,5 @@
 <div style="margin-bottom: 4rem" class="form-group">
-    <label for="invitation">Füge hier Lehrer und Schüler hinzu:</label>
+    <label for="invitation">Füge Lehrer und Schüler deiner Schule zum Team hinzu</label>
     <select name="userIds[]" multiple data-placeholder="Personen auswählen">
         {{#each users}}
             <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
