--- a/views/teams/forms/form-invite-external-member.hbs
+++ b/views/teams/forms/form-invite-external-member.hbs
@@ -1,11 +1,12 @@
 <div class="form-group">
-    <p>Füge hier externe Mitglieder hinzu:</p>
+    <p>Lade Lehrer anderer Schulen als Team-Admin ein, damit er Lehrer und Schüler seiner Schule hinzufügen kann.
+        Benutze dazu die E-Mail-Adresse, mit der sie in der Schule angemeldet sind.</p>
     <div class="form-group">
-        <label for="email">Gebe hier die E-Mail der Person ein, an welche die Einladung verschickt wird.</label>
+        <label for="email">Gebe die E-Mail der Person ein, an welche die Einladung verschickt wird.</label>
         <input class="form-control" type="text" name="email" id="email" placeholder="E-Mail eingeben">
     </div>
     <div style="margin-bottom: 6rem" class="form-group padding-bottom">
-        <label for="role">Gebe hier ein, welche Rolle das Mitglied erhalten soll.</label>
+        <label for="role">Gebe ein, welche Rolle das Mitglied erhalten soll.</label>
         <select placeholder="Rolle angeben" name="role" id="role">
             <option selected value="expert">Experte</option>
             <option value="teamadmin">Team-Admin</option>
