--- a/views/teams/forms/form-edit-member.hbs
+++ b/views/teams/forms/form-edit-member.hbs
@@ -1,13 +1,11 @@
 <div class="form-group">
-    <p>Ändere hier die Rolle des Nutzers:</p>
+    <p>Ändere die Rolle des Nutzers:</p>
     <div style="margin-bottom: 12rem" class="form-group padding-bottom">
-        <label for="role">Gebe hier ein, welche Rolle das Mitglied erhalten soll.</label>
+        <label for="role">Gebe ein, welche Rolle das Mitglied erhalten soll.</label>
         <select placeholder="Rolle angeben" name="role" id="role">
-            <option value="member" selected>Mitglied</option>
-            <option value="teamexpert">Team-Experte</option>
-            <option value="teamleader">Team-Leiter</option>
-            <option value="teamadministrator">Team-Admin</option>
-            <option value="teamowner">Team-Eigentümer</option>
+            {{#each roles}}
+                <option value="{{this._id}}" selected>{{this.label}}</option>
+            {{/each}}
         </select>
     </div>
 </div>
