--- a/views/teams/members.hbs
+++ b/views/teams/members.hbs
@@ -17,18 +17,20 @@
             <input type="hidden" name="_method" data-force-value="true" value="{{method}}"/>
         {{/if}}
 
+        <div id="roles" data-roles="{{roles}}"></div>
+
         <section class="section-course">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-6">
-                        <p>Füge hier Lehrer und Schüler aus deiner Schule zum Team hinzu.</p>
+                        <p>Füge Lehrer und Schüler aus deiner Schule zum Team hinzu.</p>
                         <button class="btn btn-primary btn-add-member padding-bottom">
                             Interne Mitglieder hinzufügen
                         </button>
                     </div>
 
                     <div class="col-sm-6">
-                        <p>Lade hier Mitglieder aus anderen Schulen zu deinem Team ein.</p>
+                        <p>Lade externe Experten und Admins anderer Schulen per E-Mail ein.</p>
                         <button class="btn btn-primary btn-invite-external-member">
                             Externe Mitglieder einladen
                         </button>
@@ -67,7 +69,7 @@
 
             {{#embed "lib/components/modal-form" action=editMemberAction class="edit-member-modal"}}
                 {{#content "fields"}}
-                    {{> "teams/forms/form-edit-member"}}
+                    {{> "teams/forms/form-edit-member" roles=roles}}
                 {{/content}}
             {{/embed}}
 
