--- a/views/firstLogin/sections/password.hbs
+++ b/views/firstLogin/sections/password.hbs
@@ -1,7 +1,7 @@
 <section data-panel="section-{{section-nr}}" {{#if submit-page}}class="submit-page"{{/if}}>
   <h4>Du hast es fast geschafft...</h4>
-  {{#if sso}}
-    <p>Nach klicken des <u>Absenden</u>-Buttons kannst du dich wie gewohnt über das System deiner Schule (Moodle, iServ, ItsLearning etc.) in der {{theme.title}} einloggen. </p>
+  {{#if @root.sso}}
+    <p>Nach klicken des <u>Absenden</u>-Buttons kannst du dich wie gewohnt über das System deiner Schule (Moodle, iServ, ItsLearning etc.) in der {{@root.theme.title}} einloggen. </p>
   {{else}}
     <p>Bitte ändere das Startpasswort. Notiere dir das neue Passwort gleich und bewahre es gut auf!</p>
     <div class="row">
