--- a/views/firstLogin/sections/thanks.hbs
+++ b/views/firstLogin/sections/thanks.hbs
@@ -1,6 +1,6 @@
-<section data-panel="section-2">
+<section data-panel="section-{{section-nr}}">
     <h4>Danke!</h4>
-    <p>Du kannst jetzt mit der Benutzung der {{theme.short_title}} fortfahren.<br>
-        <a class="btn btn-primary mt-2" href="/">{{theme.short_title}} erkunden</a>
+    <p>Du kannst jetzt mit der Benutzung der {{@root.theme.short_title}} fortfahren.<br>
+        <a class="btn btn-primary mt-2" href="/">{{@root.theme.short_title}} erkunden</a>
     </p>
 </section>
