--- a/views/teams/edit-team.hbs
+++ b/views/teams/edit-team.hbs
@@ -43,7 +43,7 @@
                            value="{{#if course.color}}{{course.color}}{{else}}#d32f2f{{/if}}" required/>
                 </div>
 
-                <div class="form-group">
+                {{!-- <div class="form-group">
                     <label>Klasse(n) <small>(Nach dem Speichern werden alle Schüler automatisch hinzugefügt!)</small></label>
 
                     <select name="classIds[]" multiple data-placeholder="Klasse(n) auswählen">
@@ -57,7 +57,7 @@
                             </option>
                         {{/each}}
                     </select>
-                </div>
+                </div> --}}
 
                 {{!-- <div class="form-group">
                     <label>Lehrer</label>
@@ -75,7 +75,7 @@
                     </select>
                 </div> --}}
 
-                <div class="form-group">
+                {{!-- <div class="form-group">
                     <label>Mitglieder</label>
 
                     <select name="userIds[]" multiple data-placeholder="Mitglieder auswählen">
@@ -89,9 +89,9 @@
                             </option>
                         {{/each}}
                     </select>
-                </div>
+                </div> --}}
 
-                <div class="panel-group">
+                {{!-- <div class="panel-group">
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <a data-toggle="collapse" href="#collapse1" class="collapse-toggle"><label>Termine auswählen</label><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></a>
@@ -156,7 +156,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> --}}
 
 
                 <div class="modal-footer">
