--- a/views/firstLogin/firstLogin.hbs
+++ b/views/firstLogin/firstLogin.hbs
@@ -4,7 +4,7 @@
     {{#embed "lib/forms/paginatedForm" sections=(arrayLength @root.sections) action="/firstLogin/submit" method="post"}}
       {{#content "panels"}}
         {{#each @root.sections}}
-          {{> (lookup @root.sections @index) section-nr=(add @index 1) submit-page=@root.submitPageIndex}}
+          {{> (lookup @root.sections @index) section-nr=(add @index 1) submit-page=(isCond (add @index 1) "==" @root.submitPageIndex)}}
         {{/each}}
       {{/content}}
     {{/embed}}
