remove permantent "selected", cleanup unused code

--- a/views/teams/forms/form-edit-member.hbs
+++ b/views/teams/forms/form-edit-member.hbs
@@ -4,7 +4,7 @@
         <label for="role">Gebe ein, welche Rolle das Mitglied erhalten soll.</label>
         <select placeholder="Rolle angeben" name="role" id="role">
             {{#each roles}}
-                <option value="{{this._id}}" selected>{{this.label}}</option>
+                <option value="{{this._id}}">{{this.label}}</option>
             {{/each}}
         </select>
     </div>
