--- a/views/firstLogin/firstLoginExistingGeb14.hbs
+++ b/views/firstLogin/firstLoginExistingGeb14.hbs
@@ -1,28 +1,15 @@
 {{#extend "lib/simple"}}
-  {{> "firstLogin/sections/imports"}}
-  {{#content "scripts" mode="append"}}
-      <script src="/scripts/confetti/confetti.js" type="text/javascript" defer></script>
-  {{/content}}
-  {{#content "styles" mode="append"}}
-      <link rel="stylesheet" href="/styles/lib/confetti/confetti.css"/>
- {{/content}}
+  {{> "firstLogin/partials/imports"}}
   {{#content "page"}}
     {{#embed "lib/forms/paginatedForm" sections=3 action="/firstLogin/submit" method="POST"}}
       {{#content "panels"}}
-        <section data-panel="section-1" class="confetti-wrapper">
-          <h4>Herzlichen Glückwunsch, {{currentUser.firstName}} {{currentUser.lastName}}! 🎉🎈</h4>
-          <p>Du bist jetzt 14 Jahre alt. Bitte erkläre im folgenden Schritt dein Einverständnis zur Nutzung der {{theme.title}}. Ab 14 Jahren ist dies zusätzlich zum bereits erklärten Einverständnis deiner Eltern nötig, damit du die {{theme.short_title}} weiter nutzen kannst.</p>
-        </section>
 
-        <section data-panel="section-2" class="submit-page">
-          <h4>Einwilligungserklärung</h4>
-          <p>Bitte bestätige jetzt folgende Einwilligungserklärungen, damit du die {{theme.title}} weiter nutzen kannst.</p>
+        {{> "firstLogin/sections/welcome_existing_geb14" section-nr=1}}
 
-            <p>Ich, <b>{{currentUser.firstName}} {{currentUser.lastName}}</b>, erkläre Folgendes:</p>
-            {{> "registration/forms/einwilligungserklaerung"}}
-        </section>
+        {{> "firstLogin/sections/consent" section-nr=2 submit-page=true}}
 
         {{> "firstLogin/sections/thanks" section-nr=3}}
+
       {{/content}}
     {{/embed}}
   {{/content}}
