adding validation for modals

--- a/views/teams/forms/form-edit-member.hbs
+++ b/views/teams/forms/form-edit-member.hbs
@@ -2,9 +2,9 @@
     <p>Ändere die Rolle des Nutzers:</p>
     <div style="margin-bottom: 12rem" class="form-group padding-bottom">
         <label for="role">Gebe ein, welche Rolle das Mitglied erhalten soll.</label>
-        <select placeholder="Rolle angeben" name="role" id="role">
+        <select placeholder="Rolle angeben" data-placeholder="Rolle angeben" name="role" id="role">
             {{#each roles}}
-                <option value="{{this._id}}">{{this.label}}</option>
+                <option value="{{this._id}}" {{#ifeq this.name "teamexpert"}}selected{{/ifeq}}>{{this.label}}</option>
             {{/each}}
         </select>
     </div>
