--- a/views/teams/members.hbs
+++ b/views/teams/members.hbs
@@ -63,6 +63,12 @@
                 </div>
             </div>
 
+            {{!-- <select placeholder="Rolle angeben" name="role" id="role">
+                {{#each roles}}
+                    <option value="{{this._id}}" {{#ifeq this.name "teamexpert"}}selected{{/ifeq}}>{{this.label}}</option>
+                {{/each}}
+            </select> --}}
+
             {{#embed "lib/components/modal-form" action=addMemberAction class="add-member-modal"}}
                 {{#content "fields"}}
                     {{> "teams/forms/form-add-member" users=users}}
