--- a/views/planner/calendar.hbs
+++ b/views/planner/calendar.hbs
@@ -1,17 +1,18 @@
 {{#extend "lib/loggedin"}}
 
-    {{#content "scripts" mode="append"}}
-        <script src="/scripts/vendor-react.js" defer></script>
-        <script src="/scripts/planner/calendar.js" defer></script>
-    {{/content}}
+{{#content "scripts" mode="append"}}
+<script src="/scripts/vendor-react.js" defer></script>
+<script src="/scripts/planner/calendar.js" defer></script>
+{{/content}}
 
-    {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/courses/course.css"/>
-    {{/content}}
+{{#content "styles" mode="append"}}
+<link rel="stylesheet" href="/styles/courses/course.css" />
+{{/content}}
 
-    {{#content "page"}}
-        <section class="section-course-edit">
-          <div id="react-root"></div>
-        </section>
-    {{/content}}
+{{#content "page"}}
+<section class="section-course-edit">
+    <div id="react-root" data-schoolYear="{{schoolYear}}" data-utcToday="{{utcToday}}" data-classTopicsData="{{classTopicsData}}"
+        data-holidaysData="{{holidaysData}}" data-otherEventsData="{{otherEventsData}}"></div>
+</section>
+{{/content}}
 {{/extend}}
