--- a/views/planner/myClasses.hbs
+++ b/views/planner/myClasses.hbs
@@ -1,17 +1,18 @@
 {{#extend "lib/loggedin"}}
 
-    {{#content "scripts" mode="append"}}
-        <script src="/scripts/vendor-react.js" defer></script>
-        <script src="/scripts/planner/myClasses.js" defer></script>
-    {{/content}}
+{{#content "scripts" mode="append"}}
+<script src="/scripts/vendor-react.js" defer></script>
+<script src="/scripts/planner/myClasses.js" defer></script>
+{{/content}}
 
-    {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/courses/course.css"/>
-    {{/content}}
+{{#content "styles" mode="append"}}
+<link rel="stylesheet" href="/styles/courses/course.css" />
+{{/content}}
 
-    {{#content "page"}}
-        <section class="section-course-edit">
-          <div id="react-root"></div>
-        </section>
-    {{/content}}
+{{#content "page"}}
+<section class="section-course-edit">
+    <div id="react-root" data-schoolYear="{{schoolYear}}" data-eventData="{{eventData}}" data-allClassTopics="{{allClassTopics}}"
+        data-allTopicTemplates="{{allTopicTemplates}}"></div>
+</section>
+{{/content}}
 {{/extend}}
