--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -27,7 +27,7 @@
                                     
                                     <div class="form-group">
                                         <label>Schullogo hochladen</label><br/>
-                                        <input type="hidden" name="logo_url">
+                                        <input type="hidden" name="logo_dataUrl">
                                         <input type="file" id="logo-input">
                                         <label for="logo-input" class="btn btn-secondary">Datei auswählen</label>
                                         <span id="logo-filename">Keine Datei ausgewählt</span>
