--- a/views/firstLogin/sections/birthdate_UE14.hbs
+++ b/views/firstLogin/sections/birthdate_UE14.hbs
@@ -1,5 +1,5 @@
 <section data-panel="section-{{section-nr}}" {{#if submit-page}}class="submit-page"{{/if}}>
-  <h4>Du hast es fast geschafft…</h4>
+  <h4>Geburtsdatum</h4>
   <p>Bitte gib dein Geburtsdatum an. Es wird benötigt, damit die Einwilligungserklärung gültig ist.</p>
   <div class="row">
       <div class="form-group col-md-6 col-sm-12">
