added redirects & naming changes

--- a/views/firstLogin/sections/birthdate_U14.hbs
+++ b/views/firstLogin/sections/birthdate_U14.hbs
@@ -1,6 +1,6 @@
 <section data-panel="section-{{section-nr}}" {{#if submit-page}}class="submit-page"{{/if}}>
   <h4>Geburtsdatum</h4>
-  <p>Zur Nutzung der {{theme.title}} benötigen wir nur noch dein Geburtsdatum.</p>
+  <p>Zur verfollständigung des Accounts benötigen wir noch dein Geburtsdatum</p>
   <div class="row">
     <div class="form-group col-md-6 col-sm-12">
       <label>Geburtsdatum: *</label>
