--- a/views/administration/forms/form-classes-manage.hbs
+++ b/views/administration/forms/form-classes-manage.hbs
@@ -1,4 +1,5 @@
 <input name="classid" type="hidden" value="{{class._id}}"/>
+<input type="hidden" name="referrer" value="{{referrer}}" />
 
 <a class="d-block mb-1"
     href="/administration/classes/{{@root.class/_id}}/edit"
