--- a/views/administration/forms/form-classes-edit.hbs
+++ b/views/administration/forms/form-classes-edit.hbs
@@ -1,6 +1,7 @@
 <input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}" />
 {{#if edit}}
     <input type="hidden" name="_id" value="{{class._id}}" />
+    <input type="hidden" name="referrer" value="{{referrer}}" />
 
     <a class="d-block mb-1"
         href="/administration/classes/{{@root.class/_id}}/manage"
