--- a/views/administration/teachers.hbs
+++ b/views/administration/teachers.hbs
@@ -12,6 +12,7 @@
                                       apply-label='Übernehmen'
                                       cancle-label='Abbrechen'
                                       handle-url='true'
+                                      save-state='true'
                 /></div>
                 <div class="container-fluid ajaxcontent">
                     <div class="row">
