--- a/views/administration/forms/form-classes-manage.hbs
+++ b/views/administration/forms/form-classes-manage.hbs
@@ -42,7 +42,7 @@
 
 
 <div class="modal-footer mt-1">
-    <a href="/administration/classes" class="btn btn-secondary">Abbrechen</a>
+    <a class="btn btn-secondary btn-cancel">Abbrechen</a>
     <button type="submit" class="btn btn-primary">Änderungen speichern</button>
 </div>
 
@@ -115,3 +115,5 @@
         </div>
     {{/content}}
 {{/embed}}
+
+{{#embed "lib/components/modal-cancel" class="cancel-modal"}}{{/embed}}
