new TODOS & fixes after meeting with Konstantin

--- a/views/firstLogin/sections/password.hbs
+++ b/views/firstLogin/sections/password.hbs
@@ -4,15 +4,8 @@
     <p>Nach klicken des <u>Absenden</u>-Buttons kannst du dich wie gewohnt über das System deiner Schule (Moodle, iServ, ItsLearning etc.) in der {{@root.theme.title}} einloggen. </p>
   {{else}}
     <p>Bitte ändere das Startpasswort. Notiere dir das neue Passwort gleich und bewahre es gut auf!</p>
-    <div class="row">
-      <div class="form-group col-md-6 col-sm-12">
-        <label>Altes Passwort: *</label>
-        <input class="form-control" id="password_verification" name="password_verification" type="password" placeholder="*******" required/>
-      </div>
-    </div>
-
     <p>
-      Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen. <br/>
+      Mindestens 8 Zeichen mit Groß- und Kleinschreibung, davon jeweils mindestens eine Zahl und ein Sonderzeichen. <br/>
       Erlaubte Sonderzeichen sind: <code>!§$%&/()=?\;:,.#+*~</code>
     </p>
     <div class="row">
