--- a/views/teams/forms/form-invite-external-member.hbs
+++ b/views/teams/forms/form-invite-external-member.hbs
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div class="form-group" data-teamId="{{teamId}} ">
     <p>Lade Lehrer anderer Schulen als Team-Admin ein, damit er Lehrer und Schüler seiner Schule hinzufügen kann.
         Benutze dazu die E-Mail-Adresse, mit der sie in der Schule angemeldet sind.</p>
     <div class="form-group">
@@ -6,10 +6,10 @@
         <input class="form-control" type="text" name="email" id="email" placeholder="E-Mail eingeben">
     </div>
     <div style="margin-bottom: 6rem" class="form-group padding-bottom">
-        <label for="role">Gebe ein, welche Rolle das Mitglied erhalten soll.</label>
+        <label for="role">Gebe ein, welche Rolle das Mitglied erhalten soll. *</label>
         <select placeholder="Rolle angeben"  data-placeholder="Rolle angeben" name="role" id="role">
             {{#each roles}}
-                <option value="{{this._id}}">{{this.label}}</option>
+                <option value="{{this._id.name}}" data-id="{{this._id._id}}">{{this.label}}</option>
             {{/each}}
         </select>
     </div>
