--- a/views/teams/members.hbs
+++ b/views/teams/members.hbs
@@ -20,25 +20,27 @@
         <div id="roles" data-roles="{{roles}}"></div>
 
         <section class="section-course">
-            {{!-- {{#userHasPermission "ADD_SCHOOL_MEMBERS"}} --}}
-                <div class="container-fluid">
-                    <div class="row">
+            <div class="container-fluid">
+                <div class="row">
+                    {{#inArray "ADD_SCHOOL_MEMBERS" permissions}}
                         <div class="col-sm-6">
                             <p>Füge Lehrer und Schüler aus deiner Schule zum Team hinzu.</p>
                             <button class="btn btn-primary btn-add-member padding-bottom">
                                 Interne Mitglieder hinzufügen
                             </button>
                         </div>
+                    {{/inArray}}
 
+                    {{#inArray "INVITE_EXPERTS" permissions}}
                         <div class="col-sm-6">
                             <p>Lade externe Experten und Admins anderer Schulen per E-Mail ein.</p>
                             <button class="btn btn-primary btn-invite-external-member">
                                 Externe Mitglieder einladen
                             </button>
                         </div>
-                    </div>
+                    {{/inArray}}
                 </div>
-            {{!-- {{/userHasPermission}} --}}
+            </div>
 
             {{!-- {{#ifCond (arrayLength bodyInvitations) '>' 0}}
                 <h4 style="margin-top: 2rem" class="padding-top">Ausstehende Einladungen</h4>
@@ -62,12 +64,6 @@
                     </div>
                 </div>
             </div>
-
-            {{!-- <select placeholder="Rolle angeben" name="role" id="role">
-                {{#each roles}}
-                    <option value="{{this._id}}" {{#ifeq this.name "teamexpert"}}selected{{/ifeq}}>{{this.label}}</option>
-                {{/each}}
-            </select> --}}
 
             {{#embed "lib/components/modal-form" action=addMemberAction class="add-member-modal"}}
                 {{#content "fields"}}
