--- a/theme/n21/views/authentication/home.hbs
+++ b/theme/n21/views/authentication/home.hbs
@@ -54,7 +54,7 @@
                         modular-skalierbaren Ansatz verfolgen. Durch diese Kooperation bietet sich die Chance über das Stadium
                         des Prototypen hinaus, bereits während der Erprobungsphase eine Plattform zu entwickeln, die langfristig
                         bundesweit und länderspezifisch effizient eingesetzt werden kann.</p>
-
+                       <p>Auf der <a href="https://www.netz-21.de/?page_id=1124">Timeline</a> können die jeweils aktuellen Entwicklungschritte verfolgt werden.</p> 
 
                     <div class="jumbotron">
                         Die folgenden Schulen und Studienseminare sind unmittelbar Projekt NBC beteiligt:
