--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -7,7 +7,7 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/jquery/jquery.datetimepicker.full.min.js" type="text/javascript" defer></script>
+        <script src="/scripts/jquery/datetimepicker-easy.js" type="text/javascript" defer></script>
         <script src="/scripts/moment/moment.js" type="text/javascript" defer></script>
         <script src="/scripts/courses.js" type="text/javascript" defer></script>
         <script src="/scripts/coursesTimes.js" type="text/javascript" defer></script>
