adding margin for files on team overview

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -7,6 +7,9 @@
     h4 {
         margin-bottom: 20px;
     }
+    .files {
+        margin-bottom: 20px;
+    }
     .lesson-date {
         line-height: 24px;
         float: right;
